Fix - Standard page overflows in RTL

--- a/assets/scss/rtl/pages/_standard-page.scss
+++ b/assets/scss/rtl/pages/_standard-page.scss
@@ -1,6 +1,8 @@
 .standard-page {
 
     .side-nav-content .side-content {
+        overflow: hidden;
+
         > .content-wrapper {
             @include breakpoint(large up) {
                 padding-left: 14%;
